--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,7 +1,7 @@
 [info]
-name = "Foundation"
+name = "Foundation - University of Manchester"
 version = "1.2.5"
-author = "Omeka Team"
+author = "Omeka Team and John McCrory"
 description = "A starter theme using the ZURB Foundation toolkit."
 theme_link = "https://github.com/omeka-s-themes/foundation-s"
 author_link = "https://omeka.org"
