--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,8 +1,8 @@
 [info]
 name = "Foundation - University of Manchester"
-version = "1.2.5"
+version = "0.1"
 author = "Omeka Team and John McCrory"
-description = "A starter theme using the ZURB Foundation toolkit."
+description = "A starter theme using version 1.2.5 of the ZURB Foundation toolkit."
 theme_link = "https://github.com/omeka-s-themes/foundation-s"
 author_link = "https://omeka.org"
 omeka_version_constraint = "^3.2.0"
