--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,6 +1,6 @@
 [info]
 name = "Foundation - University of Manchester"
-version = "0.17a"
+version = "0.17b"
 author = "Omeka Team and John McCrory"
 description = "A starter theme using version 1.2.5 of the ZURB Foundation toolkit."
 theme_link = "https://github.com/omeka-s-themes/foundation-s"
