--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,8 +1,8 @@
 [info]
 name = "Foundation - University of Manchester"
-version = "0.5"
+version = "0.6"
 author = "Omeka Team and John McCrory"
-description = "A starter theme using version 1.2.5 of the ZURB Foundation toolkit, designed for use with Dartmouth College's Agile Theme Tools."
+description = "A starter theme using version 1.2.5 of the ZURB Foundation toolkit, designed for use with Agile Humanities's/Dartmouth College's Agile Theme Tools. Annona IIIF storyboard feature enabled."
 theme_link = "https://github.com/omeka-s-themes/foundation-s"
 author_link = "https://omeka.org"
 omeka_version_constraint = "^3.2.0"
