--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,8 +1,8 @@
 [info]
 name = "Foundation - University of Manchester"
-version = "0.6"
+version = "0.7"
 author = "Omeka Team and John McCrory"
-description = "A starter theme using version 1.2.5 of the ZURB Foundation toolkit, designed for use with Agile Humanities's/Dartmouth College's Agile Theme Tools. Annona IIIF storyboard feature enabled."
+description = "A starter theme using version 1.2.5 of the ZURB Foundation toolkit, designed for use with Agile Humanities's/Dartmouth College's Agile Theme Tools: https://github.com/agile-humanities/agile-theme-tools-omeka. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language slector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
 theme_link = "https://github.com/omeka-s-themes/foundation-s"
 author_link = "https://omeka.org"
 omeka_version_constraint = "^3.2.0"
