--- a/config/theme.ini
+++ b/config/theme.ini
@@ -5,10 +5,7 @@ author = "Omeka Team and John McCrory"
 description = "A starter theme using version 1.2.5 of the ZURB Foundation toolkit, designed for use with Agile Humanities's/Dartmouth College's Agile Theme Tools: https://github.com/agile-humanities/agile-theme-tools-omeka. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language slector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
 theme_link = "https://github.com/omeka-s-themes/foundation-s"
 author_link = "https://omeka.org"
-omeka_version_constraint = "^3.2.0"
-
-helpers[] = DetectTracks
-helpers[] = OutputTrack
+omeka_version_constraint = "^4.0.0"
 
 [config]
 elements.stylesheet.name = "stylesheet"
@@ -118,3 +115,28 @@ elements.truncate_body_property.info = "How to handle long values for the body p
 elements.truncate_body_property.options.value_options.full = "Show full value"
 elements.truncate_body_property.options.value_options.fadeout = "Show 4 lines and fade out"
 elements.truncate_body_property.options.value_options.ellipsis = "Show 4 lines and clip with an ellipsis"
+
+resource_page_regions.items.full_width_main = "Full-width main"
+resource_page_regions.item_sets.full_width_main = "Full-width main"
+resource_page_regions.media.full_width_main = "Full-width main"
+
+resource_page_regions.items.main = "Main with sidebar"
+resource_page_regions.item_sets.main = "Main with sidebar"
+resource_page_regions.media.main = "Main with sidebar"
+
+resource_page_regions.items.right = "Right sidebar"
+resource_page_regions.item_sets.right = "Right sidebar"
+resource_page_regions.media.right = "Right sidebar"
+
+resource_page_regions.items.left = "Left sidebar"
+resource_page_regions.item_sets.left = "Left sidebar"
+resource_page_regions.media.left = "Left sidebar"
+
+resource_page_blocks.items.main[] = "mediaEmbeds"
+resource_page_blocks.items.main[] = "values"
+resource_page_blocks.items.main[] = "itemSets"
+resource_page_blocks.items.main[] = "sitePages"
+resource_page_blocks.items.main[] = "mediaList"
+resource_page_blocks.items.main[] = "linkedResources"
+resource_page_blocks.item_sets.main[] = "values"
+resource_page_blocks.media.main[] = "values"
