--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,8 +1,8 @@
 [info]
 name = "Foundation - University of Manchester"
-version = "1.0"
+version = "1.1"
 author = "Omeka Team and John McCrory"
-description = "A starter theme using version 1.2.5 of the ZURB Foundation toolkit, designed for use with Agile Humanities's/Dartmouth College's Agile Theme Tools: https://github.com/agile-humanities/agile-theme-tools-omeka. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language slector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
+description = "A starter theme using version 1.2.5 of the ZURB Foundation toolkit, updated for Omeka S v4.0. Designed for use with Agile Humanities's/Dartmouth College's Agile Theme Tools: https://github.com/agile-humanities/agile-theme-tools-omeka. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language slector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
 theme_link = "https://github.com/omeka-s-themes/foundation-s"
 author_link = "https://omeka.org"
 omeka_version_constraint = "^4.0.0"
