--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,6 +1,6 @@
 [info]
 name = "Foundation - University of Manchester"
-version = "1.1"
+version = "1.3.3.1"
 author = "Omeka Team and John McCrory"
 description = "A starter theme using version 1.2.5 of the ZURB Foundation toolkit, updated for Omeka S v4.0. Designed for use with Agile Humanities's/Dartmouth College's Agile Theme Tools: https://github.com/agile-humanities/agile-theme-tools-omeka. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language slector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
 theme_link = "https://github.com/omeka-s-themes/foundation-s"
@@ -70,8 +70,8 @@ elements.banner_position.type = "Laminas\Form\Element\Select"
 elements.banner_position.options.label = "Banner position"
 elements.banner_position.options.info = "Where to affix banner image when scaling down using a fixed height."
 elements.banner_position.options.value_options.center = "Fix to center"
-elements.banner_position.options.value_options.flex_start = "Fix to top"
-elements.banner_position.options.value_options.flex_end = "Fix to bottom"
+elements.banner_position.options.value_options.top = "Fix to top"
+elements.banner_position.options.value_options.bottom = "Fix to bottom"
 
 elements.footer.name = "footer"
 elements.footer.attributes.id = "footer"
