Changed default resource page blocks

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -132,11 +132,9 @@ resource_page_regions.items.left = "Left sidebar"
 resource_page_regions.item_sets.left = "Left sidebar"
 resource_page_regions.media.left = "Left sidebar"
 
-resource_page_blocks.items.main[] = "mediaEmbeds"
 resource_page_blocks.items.main[] = "values"
-resource_page_blocks.items.main[] = "itemSets"
-resource_page_blocks.items.main[] = "sitePages"
-resource_page_blocks.items.main[] = "mediaList"
-resource_page_blocks.items.main[] = "linkedResources"
+resource_page_blocks.items.right[] = "sitePages"
+resource_page_blocks.items.right[] = "itemSets"
+resource_page_blocks.item_sets.main[] = "mediaEmbeds"
 resource_page_blocks.item_sets.main[] = "values"
 resource_page_blocks.media.main[] = "values"
