--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,9 +1,9 @@
 [info]
 name = "Foundation - MDE"
-version = "1.3.5.757"
+version = "1.4.0.1"
 author = "Omeka Team and John McCrory"
 description = "A starter theme using version 1.3.5 of the ZURB Foundation toolkit, updated for Omeka S v4.0. Based on v1.3.3 of the Omeka S Foundation theme. Designed for use with Agile Humanities's/Dartmouth College's Agile Theme Tools: https://github.com/agile-humanities/agile-theme-tools-omeka. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language selector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
-theme_link = "https://github.com/omeka-s-themes/foundation-s"
+theme_link = "https://github.com/omeka-s-themes/foundation"
 author_link = "https://omeka.org"
 omeka_version_constraint = "^4.0.0"
 
@@ -132,9 +132,26 @@ resource_page_regions.items.left = "Left sidebar"
 resource_page_regions.item_sets.left = "Left sidebar"
 resource_page_regions.media.left = "Left sidebar"
 
+resource_page_blocks.items.main[] = "mediaEmbeds"
 resource_page_blocks.items.main[] = "values"
-resource_page_blocks.items.right[] = "sitePages"
-resource_page_blocks.items.right[] = "itemSets"
-resource_page_blocks.item_sets.main[] = "mediaEmbeds"
+resource_page_blocks.items.main[] = "itemSets"
+resource_page_blocks.items.main[] = "sitePages"
+resource_page_blocks.items.main[] = "mediaList"
+resource_page_blocks.items.main[] = "linkedResources"
 resource_page_blocks.item_sets.main[] = "values"
+resource_page_blocks.media.main[] = "mediaRender"
 resource_page_blocks.media.main[] = "values"
+
+block_templates.asset.a-card = "Card"
+block_templates.asset.a-media-object = "Media Object"
+block_templates.browsePreview.bp-list = "List"
+block_templates.browsePreview.bp-grid = "Grid"
+block_templates.browsePreview.bp-toggle-grid = "Toggle (default: grid)"
+block_templates.browsePreview.bp-toggle-list = "Toggle (default: list)"
+block_templates.itemWithMetadata.iwm-large-media-left = "Large Media Left"
+block_templates.itemWithMetadata.iwm-large-media-right = "Large Media Right"
+block_templates.listOfPages.lop-container = "With Container"
+block_templates.listOfSites.los-card = "Card"
+block_templates.pageTitle.pt-accent = "Accent"
+
+page_templates.full-width = "Full-width"
