--- a/config/theme.ini
+++ b/config/theme.ini
@@ -142,6 +142,7 @@ resource_page_blocks.item_sets.main[] = "values"
 resource_page_blocks.media.main[] = "mediaRender"
 resource_page_blocks.media.main[] = "values"
 
+block_templates.asset.asset-hero-large-dark-bottom = "Asset Hero Large Bottom"
 block_templates.asset.a-card = "Card"
 block_templates.asset.a-media-object = "Media Object"
 block_templates.browsePreview.bp-list = "List"
@@ -152,6 +153,8 @@ block_templates.itemWithMetadata.iwm-large-media-left = "Large Media Left"
 block_templates.itemWithMetadata.iwm-large-media-right = "Large Media Right"
 block_templates.listOfPages.lop-container = "With Container"
 block_templates.listOfSites.los-card = "Card"
+block_templates.media.item-showcase-openseadragon = "Item Showcase Openseadragon"
+block_templates.media.resource-text-full-width-dark = "Resource-text full-width dark"
 block_templates.pageTitle.pt-accent = "Accent"
 
 page_templates.full-width = "Full-width"
