Added media block templates to replicate Resource with Text

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -154,7 +154,10 @@ block_templates.itemWithMetadata.iwm-large-media-right = "Large Media Right"
 block_templates.listOfPages.lop-container = "With Container"
 block_templates.listOfSites.los-card = "Card"
 block_templates.media.item-showcase-openseadragon = "Item Showcase Openseadragon"
-block_templates.media.resource-text-full-width-dark = "Resource-text full-width dark"
+block_templates.media.resource-text-full-width-dark = "Resource-text full-width - Dark"
+block_templates.media.media-heading-text = "Text block only"
+block_templates.media.media-openseadragon = "Media block only"
+block_templates.media.media-resource-text-openseadragon-dark = "Resource-text Openseadragon dark"
 block_templates.pageTitle.pt-accent = "Accent"
 
 page_templates.full-width = "Full-width"
