Added block plus template for Resource with Text Captions

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -161,3 +161,15 @@ block_templates.media.media-resource-text-openseadragon-dark = "Resource-text Op
 block_templates.pageTitle.pt-accent = "Accent"
 
 page_templates.full-width = "Full-width"
+
+block_groups.resource_text.label = "Resource with text themeINI"
+block_groups.resource_text.layout_data.class = "full-width-css grid-x background-colour-uom-footer"
+block_groups.resource_text.block.1.layout = "heading"
+block_groups.resource_text.block.1.data.level = "1"
+block_groups.resource_text.block.1.layout_data.class = "small-12 grid-container"
+block_groups.resource_text.block.2.layout = "media"
+block_groups.resource_text.block.2.data.level = "2"
+block_groups.resource_text.block.2.layout_data.class = "small-12 large-7"
+block_groups.resource_text.block.3.layout = "media"
+block_groups.resource_text.block.3.data.level = "3"
+block_groups.resource_text.block.3.layout_data.class = "small-12 large-5"
