Added Item Showcase Blocks to resource-template folder

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -153,7 +153,14 @@ block_templates.itemWithMetadata.iwm-large-media-left = "Large Media Left"
 block_templates.itemWithMetadata.iwm-large-media-right = "Large Media Right"
 block_templates.listOfPages.lop-container = "With Container"
 block_templates.listOfSites.los-card = "Card"
+block_templates.media.item-showcase-block-full-width = "Item Showcase Block Full Width"
+block_templates.media.item-showcase-block = "Item Showcase Block"
+block_templates.media.item-showcase-item-showcase-multiples-full-width = "Item Showcase Multiples Full Width"
+block_templates.media.item-showcase-multiples = "Item Showcase Multiples"
+block_templates.media.item-showcase-openseadragon-dark = "Item Showcase Openseadragon Dark"
 block_templates.media.item-showcase-openseadragon = "Item Showcase Openseadragon"
+block_templates.media.item-showcase-openseadragon-full-width-dark = "Item Showcase Full Width Dark"
+block_templates.media.item-showcase-openseadragon-full-width = "Item Showcase Openseadragon Full Width"
 block_templates.media.resource-text-full-width-dark = "Resource-text full-width - Dark"
 block_templates.media.media-heading-text = "Text block only"
 block_templates.media.media-openseadragon = "Media block only"
