--- a/config/theme.ini
+++ b/config/theme.ini
@@ -169,8 +169,9 @@ block_templates.pageTitle.pt-accent = "Accent"
 
 page_templates.full-width = "Full-width"
 
-page_models.resource_text_default.label = "Resource with text - Title Below"
-page_models.resource_text_default.layout_data.class = "full-width-css grid-x padding-horizontal-1"
+page_models.layout = "blockGroup"
+page_models.resource_text_default.label = "Resource with text - HTML"
+page_models.resource_text_default.block.0.layout_data.class = "full-width-css grid-x padding-horizontal-1"
 page_models.resource_text_default.block.1.layout = "heading"
 page_models.resource_text_default.block.1.data.level = "1"
 page_models.resource_text_default.block.1.layout_data.class = "small-12 grid-container margin-bottom-1"
@@ -181,8 +182,22 @@ page_models.resource_text_default.block.3.layout = "html"
 page_models.resource_text_default.block.3.data.level = "3"
 page_models.resource_text_default.block.3.layout_data.class = "small-12 large-5 flex-container align-center padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_dark.label = "Resource with text - Title Below - Dark"
-page_models.resource_text_dark.layout_data.class = "full-width-css grid-x background-colour-uom-footer padding-horizontal-1"
+page_models.layout = "blockGroup"
+page_models.resource_text_dark.label = "Resource with text - UoM"
+page_models.resource_text_dark.block.0.layout_data.class = "full-width-css grid-x padding-horizontal-1"
+page_models.resource_text_dark.block.1.layout = "heading"
+page_models.resource_text_dark.block.1.data.level = "1"
+page_models.resource_text_dark.block.1.layout_data.class = "small-12 grid-container margin-bottom-1"
+page_models.resource_text_dark.block.2.layout = "media"
+page_models.resource_text_dark.block.2.data.level = "2"
+page_models.resource_text_dark.block.2.layout_data.class = "small-12 large-7 flex-container align-center align-middle padding-horizontal-1 large-padding-horizontal-2"
+page_models.resource_text_dark.block.3.layout = "media"
+page_models.resource_text_dark.block.3.data.level = "3"
+page_models.resource_text_dark.block.3.layout_data.class = "small-12 large-5 flex-container align-center padding-horizontal-1 large-padding-horizontal-2"
+
+page_models.layout = "blockGroup"
+page_models.resource_text_dark.label = "Resource with text - Dark"
+page_models.resource_text_dark.block.0.layout_data.class = "full-width-css grid-x background-colour-uom-footer padding-horizontal-1"
 page_models.resource_text_dark.block.1.layout = "heading"
 page_models.resource_text_dark.block.1.data.level = "1"
 page_models.resource_text_dark.block.1.layout_data.class = "small-12 grid-container margin-bottom-1"
