--- a/config/theme.ini
+++ b/config/theme.ini
@@ -208,7 +208,7 @@ page_models.resource_text_dark.block.3.layout = "media"
 page_models.resource_text_dark.block.3.data.level = "3"
 page_models.resource_text_dark.block.3.layout_data.class = "small-12 large-5 flex-container align-center padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_grid.label = "Resource with text - Grid"
+page_models.resource_text_grid.label = "Resource with text - Flex"
 page_models.resource_text_grid.block.0.layout = "blockGroup"
 page_models.resource_text_grid.block.0.layout_data.class = "full-width-css flex-container resourceText"
 page_models.resource_text_grid.block.1.layout = "heading"
@@ -219,3 +219,6 @@ page_models.resource_text_grid.block.2.data.level = "2"
 page_models.resource_text_grid.block.3.layout = "html"
 page_models.resource_text_grid.block.3.data.level = "3"
 page_models.resource_text_grid.block.3.layout_data.class = "flex-container grid-container align-center align-middle padding-horizontal-1 large-padding-horizontal-2"
+page_models.resource_text_grid.block.4.layout = "lineBreak"
+page_models.resource_text_grid.block.4.data.level = "4"
+page_models.resource_text_grid.block.4.data.break_type = "transparent"
