--- a/config/theme.ini
+++ b/config/theme.ini
@@ -182,7 +182,7 @@ page_models.resource_text_default.block.3.layout = "html"
 page_models.resource_text_default.block.3.data.level = "3"
 page_models.resource_text_default.block.3.layout_data.class = "small-12 large-5 flex-container align-center padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_uom.label = "Resource with text - UoM"
+page_models.resource_text_uom.label = "Resource with text - Two Media Blocks"
 page_models.resource_text_uom.block.0.layout = "blockGroup"
 page_models.resource_text_uom.block.0.layout_data.class = "full-width-css grid-x padding-1"
 page_models.resource_text_uom.block.1.layout = "heading"
@@ -195,7 +195,7 @@ page_models.resource_text_uom.block.3.layout = "media"
 page_models.resource_text_uom.block.3.data.level = "3"
 page_models.resource_text_uom.block.3.layout_data.class = "small-12 large-5 flex-container align-center padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_dark.label = "Resource with text - Dark"
+page_models.resource_text_dark.label = "Resource with text - Two Media Blocks - Dark"
 page_models.resource_text_dark.block.0.layout = "blockGroup"
 page_models.resource_text_dark.block.0.layout_data.class = "full-width-css grid-x background-colour-uom-footer padding-1 large-padding-vertical-2 xlarge-padding-vertical-3"
 page_models.resource_text_dark.block.1.layout = "heading"
@@ -210,15 +210,24 @@ page_models.resource_text_dark.block.3.layout_data.class = "small-12 large-5 fle
 
 page_models.resource_text_grid.label = "Resource with text - Flex"
 page_models.resource_text_grid.block.0.layout = "blockGroup"
-page_models.resource_text_grid.block.0.layout_data.class = "full-width-css flex-container resourceText"
+page_models.resource_text_grid.block.0.layout_data.class = "full-width-css flex-container resourceText padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3"
 page_models.resource_text_grid.block.1.layout = "heading"
 page_models.resource_text_grid.block.1.data.level = "1"
-page_models.resource_text_grid.block.1.layout_data.class = "margin-bottom-1"
+page_models.resource_text_grid.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2"
 page_models.resource_text_grid.block.2.layout = "media"
 page_models.resource_text_grid.block.2.data.level = "2"
 page_models.resource_text_grid.block.3.layout = "html"
 page_models.resource_text_grid.block.3.data.level = "3"
 page_models.resource_text_grid.block.3.layout_data.class = "flex-container grid-container align-center align-middle padding-horizontal-1 large-padding-horizontal-2"
-page_models.resource_text_grid.block.4.layout = "lineBreak"
-page_models.resource_text_grid.block.4.data.level = "4"
-page_models.resource_text_grid.block.4.data.break_type = "transparent"
+
+page_models.resource_text_grid.label = "Resource with text - Flex - Dark"
+page_models.resource_text_grid.block.0.layout = "blockGroup"
+page_models.resource_text_grid.block.0.layout_data.class = "full-width-css flex-container resourceText padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 background-colour-uom-footer"
+page_models.resource_text_grid.block.1.layout = "heading"
+page_models.resource_text_grid.block.1.data.level = "1"
+page_models.resource_text_grid.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2"
+page_models.resource_text_grid.block.2.layout = "media"
+page_models.resource_text_grid.block.2.data.level = "2"
+page_models.resource_text_grid.block.3.layout = "html"
+page_models.resource_text_grid.block.3.data.level = "3"
+page_models.resource_text_grid.block.3.layout_data.class = "flex-container grid-container align-center align-middle padding-horizontal-1 large-padding-horizontal-2"
