Removed first block group (Resource Text HTML) and added margin

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -210,7 +210,7 @@ page_models.resource_text_dark.block.3.layout_data.class = "small-12 large-5 fle
 
 page_models.resource_text_grid.label = "Resource with text - Flex"
 page_models.resource_text_grid.block.0.layout = "blockGroup"
-page_models.resource_text_grid.block.0.layout_data.class = "full-width-css flex-container resourceText padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3"
+page_models.resource_text_grid.block.0.layout_data.class = "full-width-css flex-container resourceText padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_grid.block.1.layout = "heading"
 page_models.resource_text_grid.block.1.data.level = "1"
 page_models.resource_text_grid.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2"
@@ -222,7 +222,7 @@ page_models.resource_text_grid.block.3.layout_data.class = "flex-container grid-
 
 page_models.resource_text_grid.label = "Resource with text - Flex - Dark"
 page_models.resource_text_grid.block.0.layout = "blockGroup"
-page_models.resource_text_grid.block.0.layout_data.class = "full-width-css flex-container resourceText padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 background-colour-uom-footer"
+page_models.resource_text_grid.block.0.layout_data.class = "full-width-css flex-container resourceText padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2 background-colour-uom-footer"
 page_models.resource_text_grid.block.1.layout = "heading"
 page_models.resource_text_grid.block.1.data.level = "1"
 page_models.resource_text_grid.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2"
