Added grid template

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -200,7 +200,7 @@ page_models.resource_text_flex.block.0.layout = "blockGroup"
 page_models.resource_text_flex.block.0.layout_data.class = "full-width-css flex-container resourceText padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_flex.block.1.layout = "heading"
 page_models.resource_text_flex.block.1.data.level = "1"
-page_models.resource_text_flex.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2"
+page_models.resource_text_flex.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
 page_models.resource_text_flex.block.2.layout = "media"
 page_models.resource_text_flex.block.2.data.level = "2"
 page_models.resource_text_flex.block.3.layout = "html"
@@ -212,9 +212,21 @@ page_models.resource_text_flex_dark.block.0.layout = "blockGroup"
 page_models.resource_text_flex_dark.block.0.layout_data.class = "full-width-css flex-container resourceText padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2 background-colour-uom-footer"
 page_models.resource_text_flex_dark.block.1.layout = "heading"
 page_models.resource_text_flex_dark.block.1.data.level = "1"
-page_models.resource_text_flex_dark.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2"
+page_models.resource_text_flex_dark.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
 page_models.resource_text_flex_dark.block.2.layout = "media"
 page_models.resource_text_flex_dark.block.2.data.level = "2"
 page_models.resource_text_flex_dark.block.3.layout = "html"
 page_models.resource_text_flex_dark.block.3.data.level = "3"
 page_models.resource_text_flex_dark.block.3.layout_data.class = "flex-container grid-container align-center align-middle padding-horizontal-1 large-padding-horizontal-2"
+
+page_models.resource_text_grid.label = "Resource with text - Grid"
+page_models.resource_text_grid.block.0.layout = "blockGroup"
+page_models.resource_text_grid.block.0.layout_data.class = "full-width-css resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
+page_models.resource_text_grid.block.1.layout = "heading"
+page_models.resource_text_grid.block.1.data.level = "1"
+page_models.resource_text_grid.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
+page_models.resource_text_grid.block.2.layout = "media"
+page_models.resource_text_grid.block.2.data.level = "2"
+page_models.resource_text_grid.block.3.layout = "html"
+page_models.resource_text_grid.block.3.data.level = "3"
+page_models.resource_text_grid.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
