--- a/config/theme.ini
+++ b/config/theme.ini
@@ -231,6 +231,18 @@ page_models.resource_text_grid.block.3.layout = "html"
 page_models.resource_text_grid.block.3.data.level = "3"
 page_models.resource_text_grid.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
 
+page_models.resource_text_grid_dark.label = "Resource with text - Grid - Dark"
+page_models.resource_text_grid_dark.block.0.layout = "blockGroup"
+page_models.resource_text_grid_dark.block.0.layout_data.class = "full-width-css resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
+page_models.resource_text_grid_dark.block.1.layout = "heading"
+page_models.resource_text_grid_dark.block.1.data.level = "1"
+page_models.resource_text_grid_dark.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
+page_models.resource_text_grid_dark.block.2.layout = "media"
+page_models.resource_text_grid_dark.block.2.data.level = "2"
+page_models.resource_text_grid_dark.block.3.layout = "html"
+page_models.resource_text_grid_dark.block.3.data.level = "3"
+page_models.resource_text_grid_dark.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
+
 page_models.resource_text_grid_right.label = "Resource with text - Grid - Right"
 page_models.resource_text_grid_right.block.0.layout = "blockGroup"
 page_models.resource_text_grid_right.block.0.layout_data.class = "full-width-css resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2 mediaRightGrid"
@@ -242,3 +254,27 @@ page_models.resource_text_grid_right.block.2.data.level = "2"
 page_models.resource_text_grid_right.block.3.layout = "html"
 page_models.resource_text_grid_right.block.3.data.level = "3"
 page_models.resource_text_grid_right.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
+
+page_models.resource_text_grid_portrait.label = "Resource with text - Grid - Portrait"
+page_models.resource_text_grid_portrait.block.0.layout = "blockGroup"
+page_models.resource_text_grid_portrait.block.0.layout_data.class = "full-width-css portrait resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
+page_models.resource_text_grid_portrait.block.1.layout = "heading"
+page_models.resource_text_grid_portrait.block.1.data.level = "1"
+page_models.resource_text_grid_portrait.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
+page_models.resource_text_grid_portrait.block.2.layout = "media"
+page_models.resource_text_grid_portrait.block.2.data.level = "2"
+page_models.resource_text_grid_portrait.block.3.layout = "html"
+page_models.resource_text_grid_portrait.block.3.data.level = "3"
+page_models.resource_text_grid_portrait.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
+
+page_models.resource_text_grid_container.label = "Resource with text - Grid -Container"
+page_models.resource_text_grid_container.block.0.layout = "blockGroup"
+page_models.resource_text_grid_container.block.0.layout_data.class = "resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
+page_models.resource_text_grid_container.block.1.layout = "heading"
+page_models.resource_text_grid_container.block.1.data.level = "1"
+page_models.resource_text_grid_container.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
+page_models.resource_text_grid_container.block.2.layout = "media"
+page_models.resource_text_grid_container.block.2.data.level = "2"
+page_models.resource_text_grid_container.block.3.layout = "html"
+page_models.resource_text_grid_container.block.3.data.level = "3"
+page_models.resource_text_grid_container.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
