Added HTML templates

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -153,6 +153,10 @@ block_templates.itemWithMetadata.iwm-large-media-left = "Large Media Left"
 block_templates.itemWithMetadata.iwm-large-media-right = "Large Media Right"
 block_templates.listOfPages.lop-container = "With Container"
 block_templates.listOfSites.los-card = "Card"
+block_templates.html.html-text = "Text"
+block_templates.html.html-text-lead = "Larger Text"
+block_templates.html.html-text-dark = "Text Dark Background"
+block_templates.html.html-text-lead-dark = "Larger Text Dark Background"
 block_templates.media.item-showcase-block-full-width = "Item Showcase Block Full Width"
 block_templates.media.item-showcase-block = "Item Showcase Block"
 block_templates.media.item-showcase-item-showcase-multiples-full-width = "Item Showcase Multiples Full Width"
