--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,6 +1,6 @@
 [info]
 name = "Foundation - MDE"
-version = "1.4.0.41"
+version = "1.4.0.411"
 author = "Omeka Team and John McCrory"
 description = "A starter theme using version 1.3.5 of the ZURB Foundation toolkit, updated for Omeka S v4.0. Based on v1.3.3 of the Omeka S Foundation theme. Designed for use with Agile Humanities's/Dartmouth College's Agile Theme Tools: https://github.com/agile-humanities/agile-theme-tools-omeka. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language selector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
 theme_link = "https://github.com/omeka-s-themes/foundation"
@@ -188,7 +188,7 @@ page_models.resource_text_uom.block.3.layout_data.class = "small-12 large-5 flex
 
 page_models.resource_text_dark.label = "Resource with text - Two Media Blocks - Dark"
 page_models.resource_text_dark.block.0.layout = "blockGroup"
-page_models.resource_text_dark.block.0.layout_data.class = "full-width grid-x dark-background padding-1 large-padding-vertical-2 xlarge-padding-vertical-3"
+page_models.resource_text_dark.block.0.layout_data.class = "full-width dark-background grid-x dark-background padding-1 large-padding-vertical-2 xlarge-padding-vertical-3"
 page_models.resource_text_dark.block.1.layout = "heading"
 page_models.resource_text_dark.block.1.data.level = "1"
 page_models.resource_text_dark.block.1.layout_data.class = "small-12 grid-container margin-bottom-1"
@@ -213,7 +213,7 @@ page_models.resource_text_flex.block.3.layout_data.class = "flex-container grid-
 
 page_models.resource_text_flex_dark.label = "Resource with text - Flex - Dark"
 page_models.resource_text_flex_dark.block.0.layout = "blockGroup"
-page_models.resource_text_flex_dark.block.0.layout_data.class = "full-width flex-container resourceText padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2 dark-background"
+page_models.resource_text_flex_dark.block.0.layout_data.class = "full-width dark-background flex-container resourceText padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2 dark-background"
 page_models.resource_text_flex_dark.block.1.layout = "heading"
 page_models.resource_text_flex_dark.block.1.data.level = "1"
 page_models.resource_text_flex_dark.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
@@ -237,7 +237,7 @@ page_models.resource_text_grid.block.3.layout_data.class = "padding-horizontal-1
 
 page_models.resource_text_grid_dark.label = "Resource with text - Grid - Dark"
 page_models.resource_text_grid_dark.block.0.layout = "blockGroup"
-page_models.resource_text_grid_dark.block.0.layout_data.class = "full-width resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
+page_models.resource_text_grid_dark.block.0.layout_data.class = "full-width dark-background resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_grid_dark.block.1.layout = "heading"
 page_models.resource_text_grid_dark.block.1.data.level = "1"
 page_models.resource_text_grid_dark.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
