--- a/config/theme.ini
+++ b/config/theme.ini
@@ -157,15 +157,7 @@ block_templates.html.html-text = "Text"
 block_templates.html.html-text-lead = "Larger Text"
 block_templates.html.html-text-dark = "Text Dark Background"
 block_templates.html.html-text-lead-dark = "Larger Text Dark Background"
-block_templates.media.item-showcase-block-full-width = "Item Showcase Block Full Width"
-block_templates.media.item-showcase-block = "Item Showcase Block"
-block_templates.media.item-showcase-item-showcase-multiples-full-width = "Item Showcase Multiples Full Width"
-block_templates.media.item-showcase-multiples = "Item Showcase Multiples"
-block_templates.media.item-showcase-openseadragon-dark = "Item Showcase Openseadragon Dark"
-block_templates.media.item-showcase-openseadragon = "Item Showcase Openseadragon"
-block_templates.media.item-showcase-openseadragon-full-width-dark = "Item Showcase Full Width Dark"
-block_templates.media.item-showcase-openseadragon-full-width = "Item Showcase Openseadragon Full Width"
-block_templates.media.resource-text-full-width-dark = "Resource-text full-width - Dark"
+block_templates.media.media-caption-text = "Caption alongside Media"
 block_templates.media.media-heading-text = "Text block only"
 block_templates.media.media-openseadragon = "Media block only"
 block_templates.media.media-resource-text-openseadragon-dark = "Resource-text Openseadragon dark"
