Added rules for JPEG images

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -196,7 +196,7 @@ page_models.resource_text_flex.block.0.layout = "blockGroup"
 page_models.resource_text_flex.block.0.layout_data.class = "full-width flex-container resourceText padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_flex.block.1.layout = "heading"
 page_models.resource_text_flex.block.1.data.level = "1"
-page_models.resource_text_flex.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
+page_models.resource_text_flex.block.1.layout_data.class = "margin-bottom-1 grid-container"
 page_models.resource_text_flex.block.2.layout = "media"
 page_models.resource_text_flex.block.2.data.level = "2"
 page_models.resource_text_flex.block.3.layout = "html"
@@ -208,7 +208,7 @@ page_models.resource_text_flex_dark.block.0.layout = "blockGroup"
 page_models.resource_text_flex_dark.block.0.layout_data.class = "full-width dark-background flex-container resourceText padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2 dark-background"
 page_models.resource_text_flex_dark.block.1.layout = "heading"
 page_models.resource_text_flex_dark.block.1.data.level = "1"
-page_models.resource_text_flex_dark.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
+page_models.resource_text_flex_dark.block.1.layout_data.class = "margin-bottom-1 grid-container"
 page_models.resource_text_flex_dark.block.2.layout = "media"
 page_models.resource_text_flex_dark.block.2.data.level = "2"
 page_models.resource_text_flex_dark.block.3.layout = "html"
@@ -220,7 +220,7 @@ page_models.resource_text_grid.block.0.layout = "blockGroup"
 page_models.resource_text_grid.block.0.layout_data.class = "full-width resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_grid.block.1.layout = "heading"
 page_models.resource_text_grid.block.1.data.level = "1"
-page_models.resource_text_grid.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
+page_models.resource_text_grid.block.1.layout_data.class = "margin-bottom-1 grid-container"
 page_models.resource_text_grid.block.2.layout = "media"
 page_models.resource_text_grid.block.2.data.level = "2"
 page_models.resource_text_grid.block.3.layout = "html"
@@ -232,7 +232,7 @@ page_models.resource_text_grid_dark.block.0.layout = "blockGroup"
 page_models.resource_text_grid_dark.block.0.layout_data.class = "full-width dark-background resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_grid_dark.block.1.layout = "heading"
 page_models.resource_text_grid_dark.block.1.data.level = "1"
-page_models.resource_text_grid_dark.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
+page_models.resource_text_grid_dark.block.1.layout_data.class = "margin-bottom-1 grid-container"
 page_models.resource_text_grid_dark.block.2.layout = "media"
 page_models.resource_text_grid_dark.block.2.data.level = "2"
 page_models.resource_text_grid_dark.block.3.layout = "html"
@@ -244,7 +244,7 @@ page_models.resource_text_grid_right.block.0.layout = "blockGroup"
 page_models.resource_text_grid_right.block.0.layout_data.class = "full-width resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2 mediaRightGrid"
 page_models.resource_text_grid_right.block.1.layout = "heading"
 page_models.resource_text_grid_right.block.1.data.level = "1"
-page_models.resource_text_grid_right.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
+page_models.resource_text_grid_right.block.1.layout_data.class = "margin-bottom-1 grid-container"
 page_models.resource_text_grid_right.block.2.layout = "media"
 page_models.resource_text_grid_right.block.2.data.level = "2"
 page_models.resource_text_grid_right.block.3.layout = "html"
@@ -256,7 +256,7 @@ page_models.resource_text_grid_portrait.block.0.layout = "blockGroup"
 page_models.resource_text_grid_portrait.block.0.layout_data.class = "full-width portrait resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_grid_portrait.block.1.layout = "heading"
 page_models.resource_text_grid_portrait.block.1.data.level = "1"
-page_models.resource_text_grid_portrait.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
+page_models.resource_text_grid_portrait.block.1.layout_data.class = "margin-bottom-1 grid-container"
 page_models.resource_text_grid_portrait.block.2.layout = "media"
 page_models.resource_text_grid_portrait.block.2.data.level = "2"
 page_models.resource_text_grid_portrait.block.3.layout = "html"
@@ -268,7 +268,7 @@ page_models.resource_text_grid_container.block.0.layout = "blockGroup"
 page_models.resource_text_grid_container.block.0.layout_data.class = "resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_grid_container.block.1.layout = "heading"
 page_models.resource_text_grid_container.block.1.data.level = "1"
-page_models.resource_text_grid_container.block.1.layout_data.class = "margin-bottom-1 large-margin-bottom-2 grid-container"
+page_models.resource_text_grid_container.block.1.layout_data.class = "margin-bottom-1 grid-container"
 page_models.resource_text_grid_container.block.2.layout = "media"
 page_models.resource_text_grid_container.block.2.data.level = "2"
 page_models.resource_text_grid_container.block.3.layout = "html"
