Added padding to Resource text block templates

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -199,6 +199,7 @@ page_models.resource_text_grid.block.1.data.level = "1"
 page_models.resource_text_grid.block.1.layout_data.class = "margin-bottom-1 grid-container"
 page_models.resource_text_grid.block.2.layout = "media"
 page_models.resource_text_grid.block.2.data.level = "2"
+page_models.resource_text_grid.block.3.layout_data.class = "xlarge-padding-horizontal-1"
 page_models.resource_text_grid.block.3.layout = "html"
 page_models.resource_text_grid.block.3.data.level = "3"
 page_models.resource_text_grid.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
@@ -211,6 +212,7 @@ page_models.resource_text_grid_dark.block.1.data.level = "1"
 page_models.resource_text_grid_dark.block.1.layout_data.class = "margin-bottom-1 grid-container"
 page_models.resource_text_grid_dark.block.2.layout = "media"
 page_models.resource_text_grid_dark.block.2.data.level = "2"
+page_models.resource_text_grid.block.3.layout_data.class = "xlarge-padding-horizontal-1"
 page_models.resource_text_grid_dark.block.3.layout = "html"
 page_models.resource_text_grid_dark.block.3.data.level = "3"
 page_models.resource_text_grid_dark.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
@@ -223,6 +225,7 @@ page_models.resource_text_grid_right.block.1.data.level = "1"
 page_models.resource_text_grid_right.block.1.layout_data.class = "margin-bottom-1 grid-container"
 page_models.resource_text_grid_right.block.2.layout = "media"
 page_models.resource_text_grid_right.block.2.data.level = "2"
+page_models.resource_text_grid.block.3.layout_data.class = "xlarge-padding-horizontal-1"
 page_models.resource_text_grid_right.block.3.layout = "html"
 page_models.resource_text_grid_right.block.3.data.level = "3"
 page_models.resource_text_grid_right.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
