Added margin to button and padding to Media block templates

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,6 +1,6 @@
 [info]
 name = "Foundation - MDE"
-version = "1.4.0.42"
+version = "1.4.0.43"
 author = "Omeka Team and John McCrory"
 description = "A starter theme using version 1.3.5 of the ZURB Foundation toolkit, updated for Omeka S v4.0. Based on v1.3.3 of the Omeka S Foundation theme. Designed for use with Agile Humanities's/Dartmouth College's Agile Theme Tools: https://github.com/agile-humanities/agile-theme-tools-omeka. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language selector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
 theme_link = "https://github.com/omeka-s-themes/foundation"
@@ -199,7 +199,7 @@ page_models.resource_text_grid.block.1.data.level = "1"
 page_models.resource_text_grid.block.1.layout_data.class = "margin-bottom-1 grid-container"
 page_models.resource_text_grid.block.2.layout = "media"
 page_models.resource_text_grid.block.2.data.level = "2"
-page_models.resource_text_grid.block.3.layout_data.class = "xlarge-padding-horizontal-1"
+page_models.resource_text_grid.block.3.layout_data.class = "large-padding-horizontal-1 xlarge-padding-horizontal-2"
 page_models.resource_text_grid.block.3.layout = "html"
 page_models.resource_text_grid.block.3.data.level = "3"
 page_models.resource_text_grid.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
@@ -212,7 +212,7 @@ page_models.resource_text_grid_dark.block.1.data.level = "1"
 page_models.resource_text_grid_dark.block.1.layout_data.class = "margin-bottom-1 grid-container"
 page_models.resource_text_grid_dark.block.2.layout = "media"
 page_models.resource_text_grid_dark.block.2.data.level = "2"
-page_models.resource_text_grid.block.3.layout_data.class = "xlarge-padding-horizontal-1"
+page_models.resource_text_grid.block.3.layout_data.class = "large-padding-horizontal-1 xlarge-padding-horizontal-2"
 page_models.resource_text_grid_dark.block.3.layout = "html"
 page_models.resource_text_grid_dark.block.3.data.level = "3"
 page_models.resource_text_grid_dark.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
@@ -225,7 +225,7 @@ page_models.resource_text_grid_right.block.1.data.level = "1"
 page_models.resource_text_grid_right.block.1.layout_data.class = "margin-bottom-1 grid-container"
 page_models.resource_text_grid_right.block.2.layout = "media"
 page_models.resource_text_grid_right.block.2.data.level = "2"
-page_models.resource_text_grid.block.3.layout_data.class = "xlarge-padding-horizontal-1"
+page_models.resource_text_grid.block.3.layout_data.class = "large-padding-horizontal-1 xlarge-padding-horizontal-2"
 page_models.resource_text_grid_right.block.3.layout = "html"
 page_models.resource_text_grid_right.block.3.data.level = "3"
 page_models.resource_text_grid_right.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
@@ -238,6 +238,7 @@ page_models.resource_text_grid_portrait.block.1.data.level = "1"
 page_models.resource_text_grid_portrait.block.1.layout_data.class = "margin-bottom-1 grid-container"
 page_models.resource_text_grid_portrait.block.2.layout = "media"
 page_models.resource_text_grid_portrait.block.2.data.level = "2"
+page_models.resource_text_grid.block.3.layout_data.class = "large-padding-horizontal-1 xlarge-padding-horizontal-2"
 page_models.resource_text_grid_portrait.block.3.layout = "html"
 page_models.resource_text_grid_portrait.block.3.data.level = "3"
 page_models.resource_text_grid_portrait.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
