Added further asset block to include title and caption

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -145,7 +145,8 @@ resource_page_blocks.media.main[] = "values"
 block_templates.asset.asset-hero-large-dark-bottom = "Asset Hero Large Bottom"
 block_templates.asset.a-card = "Card"
 block_templates.asset.a-media-object = "Media Object"
-block_templates.asset.a-hero-image = "Asset Hero UoM"
+block_templates.asset.a-hero-image = "Hero with title only"
+block_templates.asset.a-hero-image-title-caption = "Hero with title and caption"
 block_templates.browsePreview.bp-list = "List"
 block_templates.browsePreview.bp-grid = "Grid"
 block_templates.browsePreview.bp-toggle-grid = "Toggle (default: grid)"
