--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,6 +1,6 @@
 [info]
 name = "Foundation - MDE"
-version = "1.4.0.552"
+version = "1.4.0.553"
 author = "Omeka Team and John McCrory"
 description = "A starter theme using version 1.3.5 of the ZURB Foundation toolkit, updated for Omeka S v4.0. Based on v1.3.3 of the Omeka S Foundation theme. Designed for use with Agile Humanities's/Dartmouth College's Agile Theme Tools: https://github.com/agile-humanities/agile-theme-tools-omeka. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language selector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
 theme_link = "https://github.com/omeka-s-themes/foundation"
@@ -160,9 +160,9 @@ block_templates.html.html-text-lead = "Larger Text"
 block_templates.html.html-text-dark = "Text Dark Background"
 block_templates.html.html-text-lead-dark = "Larger Text Dark Background"
 block_templates.media.media-caption-text = "Caption alongside Media"
-block_templates.media.media-heading-text = "Text block only"
-block_templates.media.media-openseadragon = "Media block only"
-block_templates.media.media-resource-text-openseadragon-dark = "Resource-text Openseadragon dark"
+block_templates.media.media-text-only = "Text block only"
+block_templates.media.media-only = "Media block only"
+block_templates.media.media-text-around-image = "Text around image"
 block_templates.pageTitle.pt-accent = "Accent"
 
 page_templates.full-width = "Full-width"
