Added blockquote to HTML template list

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -159,6 +159,7 @@ block_templates.html.html-text = "Text"
 block_templates.html.html-text-lead = "Larger Text"
 block_templates.html.html-text-dark = "Text Dark Background"
 block_templates.html.html-text-lead-dark = "Larger Text Dark Background"
+block_templates.html.html-blockquote = "Blockquote"
 block_templates.media.media-caption-text = "Caption alongside Media"
 block_templates.media.media-text-only = "Text block only"
 block_templates.media.media-only = "Media block only"
