--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,6 +1,6 @@
 [info]
 name = "Foundation - MDE"
-version = "1.4.0.5557"
+version = "1.4.0.5558"
 author = "Omeka Team and John McCrory"
 description = "A starter theme using version 1.3.5 of the ZURB Foundation toolkit, updated for Omeka S v4.0. Based on v1.3.3 of the Omeka S Foundation theme. Designed for use with Agile Humanities's/Dartmouth College's Agile Theme Tools: https://github.com/agile-humanities/agile-theme-tools-omeka. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language selector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
 theme_link = "https://github.com/omeka-s-themes/foundation"
@@ -144,6 +144,7 @@ resource_page_blocks.media.main[] = "values"
 
 block_templates.asset.asset-hero-large-dark-bottom = "Asset Hero Large Bottom"
 block_templates.asset.a-card = "Card"
+block_templates.asset.a-caption = "Asset with Caption"
 block_templates.asset.a-media-object = "Media Object"
 block_templates.asset.a-hero-image = "Hero with title only"
 block_templates.asset.a-hero-image-title-caption = "Hero with title and caption"
