First draft of toggle-caption

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -163,6 +163,7 @@ block_templates.media.media-caption-text = "Caption alongside Media"
 block_templates.media.media-text-only = "Text block only"
 block_templates.media.media-only = "Media block only"
 block_templates.media.media-text-around-image = "Text around image"
+block_templates.media.media-toggle-caption = "Toggle Caption"
 block_templates.pageTitle.pt-accent = "Accent"
 
 page_templates.full-width = "Full-width"
