Revised default blocks

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -132,9 +132,9 @@ resource_page_regions.items.left = "Left sidebar"
 resource_page_regions.item_sets.left = "Left sidebar"
 resource_page_regions.media.left = "Left sidebar"
 
-resource_page_blocks.items.main[] = "values"
-resource_page_blocks.items.main[] = "itemSets"
-resource_page_blocks.items.main[] = "sitePages"
+resource_page_blocks.items.full_width_main[] = "values"
+resource_page_blocks.items.full_width_main[] = "itemSets"
+resource_page_blocks.items.full_width_main[] = "sitePages"
 resource_page_blocks.item_sets.main[] = "values"
 resource_page_blocks.media.main[] = "mediaRender"
 resource_page_blocks.media.main[] = "values"
