Revised blockGroup labels

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,6 +1,6 @@
 [info]
 name = "Foundation - MDE"
-version = "1.4.0.5587"
+version = "1.4.0.5588"
 author = "Omeka Team and John McCrory"
 description = "A starter theme using version 1.3.5 of the ZURB Foundation toolkit, updated for Omeka S v4.0. Based on v1.3.3 of the Omeka S Foundation theme. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language selector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
 theme_link = "https://github.com/omeka-s-themes/foundation"
@@ -159,12 +159,12 @@ block_templates.html.html-text-dark = "Text Dark Background"
 block_templates.html.html-text-lead-dark = "Larger Text Dark Background"
 block_templates.html.html-blockquote = "Blockquote"
 block_templates.html.html-content-warning = "Content Warning"
-block_templates.media.media-caption-text = "Caption alongside Media"
+block_templates.media.media-caption-text = "Caption alongside media"
 block_templates.media.media-caption-text-metadata = "Caption alongside media with additional metadata"
 block_templates.media.media-text-only = "Text block only"
 block_templates.media.media-only = "Media block only"
 block_templates.media.media-text-around-image = "Text around image"
-block_templates.media.media-toggle-caption = "Toggle Caption"
+block_templates.media.media-toggle-caption = "Toggle caption"
 block_templates.pageTitle.pt-accent = "Accent"
 
 page_templates.full-width = "Full-width"
@@ -195,7 +195,7 @@ page_models.resource_text_dark.block.3.layout = "media"
 page_models.resource_text_dark.block.3.data.level = "3"
 page_models.resource_text_dark.block.3.layout_data.class = "small-12 large-5 flex-container align-center padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_grid.label = "Resource with text - Grid"
+page_models.resource_text_grid.label = "Media with caption and text"
 page_models.resource_text_grid.block.0.layout = "blockGroup"
 page_models.resource_text_grid.block.0.layout_data.class = "full-width resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_grid.block.1.layout = "heading"
@@ -208,7 +208,7 @@ page_models.resource_text_grid.block.3.layout = "html"
 page_models.resource_text_grid.block.3.data.level = "3"
 page_models.resource_text_grid.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_grid_dark.label = "Resource with text - Grid - Dark"
+page_models.resource_text_grid_dark.label = "Media with caption and text - dark background"
 page_models.resource_text_grid_dark.block.0.layout = "blockGroup"
 page_models.resource_text_grid_dark.block.0.layout_data.class = "full-width dark-background resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_grid_dark.block.1.layout = "heading"
@@ -221,7 +221,7 @@ page_models.resource_text_grid_dark.block.3.layout = "html"
 page_models.resource_text_grid_dark.block.3.data.level = "3"
 page_models.resource_text_grid_dark.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_grid_right.label = "Resource with text - Grid - Right"
+page_models.resource_text_grid_right.label = "Media with caption and text - media right"
 page_models.resource_text_grid_right.block.0.layout = "blockGroup"
 page_models.resource_text_grid_right.block.0.layout_data.class = "full-width resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2 mediaRightGrid"
 page_models.resource_text_grid_right.block.1.layout = "heading"
@@ -234,7 +234,7 @@ page_models.resource_text_grid_right.block.3.layout = "html"
 page_models.resource_text_grid_right.block.3.data.level = "3"
 page_models.resource_text_grid_right.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_grid_portrait.label = "Resource with text - Grid - Portrait"
+page_models.resource_text_grid_portrait.label = "Media with caption and text - portrait"
 page_models.resource_text_grid_portrait.block.0.layout = "blockGroup"
 page_models.resource_text_grid_portrait.block.0.layout_data.class = "full-width portrait resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_grid_portrait.block.1.layout = "heading"
@@ -247,7 +247,7 @@ page_models.resource_text_grid_portrait.block.3.layout = "html"
 page_models.resource_text_grid_portrait.block.3.data.level = "3"
 page_models.resource_text_grid_portrait.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_grid_container.label = "Resource with text - Grid -Container"
+page_models.resource_text_grid_container.label = "Media with caption and text - container"
 page_models.resource_text_grid_container.block.0.layout = "blockGroup"
 page_models.resource_text_grid_container.block.0.layout_data.class = "resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_grid_container.block.1.layout = "heading"
