--- a/config/theme.ini
+++ b/config/theme.ini
@@ -163,7 +163,7 @@ block_templates.media.media-caption-text = "Caption alongside media"
 block_templates.media.media-caption-text-metadata = "Caption alongside media with additional metadata"
 block_templates.media.media-text-only = "Text block only"
 block_templates.media.media-only = "Media block only"
-block_templates.media.media-text-around-image = "Text around image"
+block_templates.media.media-text-around-image = "Text around media"
 block_templates.media.media-toggle-caption = "Toggle caption"
 block_templates.pageTitle.pt-accent = "Accent"
 
